--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -17,6 +17,17 @@ body {
   height: 50px;
   position: absolute;
   border-radius: 5px;
+}
+
+#gameItemTwo {
+  background-color:#FFAC1C;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  border-radius: 5px;
+  right: 0px;
+  bottom: 0px;
+}
 /*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
 /*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
-}
+
