--- a/asd-projects/pong/index.css
+++ b/asd-projects/pong/index.css
@@ -1,21 +1,67 @@
 
 body {
-  background-color: darkgreen;
+  background-color: black;
 }
 
 #board {
   width: 440px;
   height: 440px;
   border: 1px solid white;
-  background-color: black;
+  background-color: #0f2227;
   position: relative;
 }
 
-#gameItem {
-  background-color: teal;
-  width: 50px;
+#scoreOne{
+  width: 100px;
+  height: 50px;
+  background-color: white; /* temp */
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: center;
+  position: absolute;
+  top: 500px;
+  left: 100px;
+}
+
+#scoreTwo{
+  width: 100px;
+  height: 50px;
+  background-color: white; /* temp */
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-align: center;
+  position: absolute;
+  top: 500px;
+  right: 100px; 
+}
+
+/* player one's paddle */
+#paddleOne {
+  background-color: #227b9a;
+  width: 10px;
   height: 50px;
   position: absolute;
-/*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
-/*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
+  top: 215px;
+}
+/* player two's paddle */
+#paddleTwo {
+  background-color: #227b9a;
+  width: 10px;
+  height: 50px;
+  position: absolute;
+  right: 0px;
+  top: 215px;
+}
+
+/* the ping pong ball */
+#ball {
+  background-color: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  border: 1px solid white;
+  position: absolute;
+
+  /* will change position later
+  left: 200px;
+  top: 200px;
+  */
 }
