--- a/asd-projects/pong/index.css
+++ b/asd-projects/pong/index.css
@@ -14,23 +14,23 @@ body {
 #scoreOne{
   width: 100px;
   height: 50px;
-  background-color: white; /* temp */
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
+  color: white;
   position: absolute;
-  top: 500px;
-  left: 100px;
+  top: 10px;
+  left: 0px;
 }
 
 #scoreTwo{
   width: 100px;
   height: 50px;
-  background-color: white; /* temp */
+  color: white;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
   position: absolute;
-  top: 500px;
-  right: 100px; 
+  top: 10px;
+  right: 0px; 
 }
 
 /* player one's paddle */
@@ -60,9 +60,14 @@ body {
   border-radius: 20px;
   border: 1px solid white;
   position: absolute;
+}
 
-  /* will change position later
-  left: 200px;
-  top: 200px;
-  */
+/* game over message */
+#gameOver {
+  background-color: #0f2227;
+  font-size: 30px;
+  color: white;
+  position: absolute;
+  top: 100px;
+  right: 150px;
 }
