--- a/pages/random-thoughts.css
+++ b/pages/random-thoughts.css
@@ -7,6 +7,7 @@
 
 html {
     height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -57,29 +58,25 @@ a:hover {
     font-weight: bold;
 }
 
-.resume {
-    position: relative;
-    top: 30px;
-    width: max-content;
+header {
+    font-weight: 400;
+    width: 90%;
     margin: auto;
-    list-style-type: none;
-    padding: 20px 20px;
+    background: var(--bg-color);
+}
+
+.thoughts {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.thoughts p {
+    background: var(--bg-color);
 }
 
 p a {
-    color: var(--text-color);
-}
-
-h1, h2 {
-    font-weight: 400;
-    background: var(--bg-color);
-}
-
-ul {
-    background: var(--bg-color);
-}
-
-.project-links {
     color: var(--text-color);
     text-decoration-line: underline;
     text-decoration-color: rgba(71, 23, 246, .5);
